added testcase